force-app/main/default/objects/MM_Questionnaire__c/MM_Questionnaire__c.object-meta.xml
<CustomObject>
    <description>Acts as the container for a specific assessment (e.g., &quot;PHQ-9 Depression Screener&quot; or &quot;GAD-7 Anxiety Test&quot;). Manages versions and active periods.</description>
    <label>Questionnaire</label>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>