force-app/main/default/objects/MM_Questionnaire__c/fields/MM_Description__c.field-meta.xml
<CustomField>
    <fullName>MM_Description__c</fullName>
    <description>Instructions or purpose of the assessment</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>