force-app/main/default/objects/MM_Questionnaire__c/fields/MM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MM_End_Date__c</fullName>
    <description>Validity period for the version</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>