force-app/main/default/objects/MM_Questionnaire__c/fields/MM_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>MM_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the questionnaire is currently usable</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>