force-app/main/default/objects/MM_Questionnaire__c/fields/MM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MM_Start_Date__c</fullName>
    <description>Validity period for the version</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>