force-app/main/default/objects/MM_Questionnaire__c/fields/MM_Version__c.field-meta.xml
<CustomField>
    <fullName>MM_Version__c</fullName>
    <description>Version identifier (e.g., &quot;v2.1&quot;).</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>