force-app/main/default/objects/MM_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MM_Is_Active__c</columns>
    <columns>MM_Version__c</columns>
    <columns>MM_Start_Date__c</columns>
    <columns>MM_End_Date__c</columns>
    <columns>MM_Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>